fix(calendar): agenda event icon color in dark mode

--- a/packages/theme-default/src/components/calendar/view-month-agenda/month-agenda-day.scss
+++ b/packages/theme-default/src/components/calendar/view-month-agenda/month-agenda-day.scss
@@ -25,4 +25,9 @@
   height: $icon-size;
   width: $icon-size;
   border-radius: 50%;
+  filter: brightness(1.6);
+
+  .is-dark & {
+    filter: initial;
+  }
 }
